# platformer

./: .gitignore  CLAUDE.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: demo-level-notes.md  platformer-asset-checklist.md  platformer-build-plan.md  platformer-prd-v1.md  sprite-extractor-cli-prd.md  sprite-tools-implementation-plan.md
public/assets/levels/: demo.json
public/assets/sprites/: coin.manifest.json  star_2.manifest.json  star_3.manifest.json  wizard.manifest.json
src/: App.tsx
src/data/: defaultPhysics.ts
src/engine/: Camera.ts  Collision.ts  EntityManager.ts  GameLoop.ts  InputManager.ts  Physics.ts  PlayerController.ts  SoundManager.ts  SpriteSheet.ts  TileMap.ts  ladderDismount.test.ts  movingPlatformIdle.test.ts  types.ts
src/renderer/: Renderer.ts  SpriteRenderer.ts  TileRenderer.ts
src/ui/: GameCanvas.tsx
tools/: README.md  pyproject.toml
tools/sprite_tools/: __init__.py
tools/sprite_tools/cli/: assemble.py  clean.py  extract.py  grid_detect.py  normalize.py  pipeline.py  template.py
tools/sprite_tools/core/: background.py  border_detect.py  correction.py  grid.py  template_layout.py  transform.py
tools/sprite_tools/util/: color.py  debug.py  image_io.py
