[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sprite-tools"
version = "0.1.0"
description = "CLI pipeline for extracting sprite sheets from hand-drawn scans"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8",
    "numpy>=1.24",
    "Pillow>=10.0",
]

[project.scripts]
sprite-grid-detect = "sprite_tools.cli.grid_detect:main"
sprite-extract = "sprite_tools.cli.extract:main"
sprite-clean = "sprite_tools.cli.clean:main"
sprite-normalize = "sprite_tools.cli.normalize:main"
sprite-assemble = "sprite_tools.cli.assemble:main"
sprite-pipeline = "sprite_tools.cli.pipeline:main"

[tool.setuptools.packages.find]
where = ["."]
